<resources>
    <string name="app_name">yungman3_2</string>
    <string name="name_film">Название фильма</string>
    <string name="year">Год: 2020</string>
    <string name="opisanie">Описание</string>
    <string name="logo">MADVENTURE</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="sign_in">Войти</string>
    <string name="research">Поиск фильмов...</string>
    <string name="films">Фильмы</string>
</resources>