<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/i"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="50dp">

    <LinearLayout
        android:id="@+id/loginContainer"
        android:layout_width="500dp"
        android:layout_height="400dp"
        android:background="@drawable/placeholde"
        android:orientation="vertical"
        android:padding="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logo"
            android:textColor="@color/aquamarine"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/email"
            android:textColorHint="@color/hint"
            android:textSize="20sp"
            android:padding="15dp"
            android:textColor="@color/aquamarine"
            android:layout_marginBottom="20dp"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/password"
            android:textSize="20sp"
            android:padding="15dp"
            android:textColor="@color/aquamarine"
            android:textColorHint="@color/hint"
            android:layout_marginBottom="40dp"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/sign_in"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:background="@drawable/rounded_button_background"/>

    </LinearLayout>

</LinearLayout>